assets/styles/src/style.css
/* ... */
.committee-header{
	position: fixed;
	z-index: 10;
	box-sizing: border-box;
	z-index: 99;
	left: auto;
  top: auto;
	top: 1.05rem;
  right: 0.9rem;
  background: transparent;
  width: 1.31rem;
  height: 0.8rem;
  padding: 0;
	transition: filter .13s ease-in-out;
}
	.committee-header h1{
		margin-bottom: 0;
		width: 100%;
		height: 100%;
		pointer-events: painted;
		position: relative;
	}
		.committee-header h1 svg{
			position: absolute;
			top: 0;
			width: 100%;
		}
			.committee-header h1 svg path{
				fill: #000000;
				transition: fill .3s ease-in-out;
			}
			body.loading .committee-header h1 svg path{
				transition-delay: .3s;
			}
		.committee-header--logo__full,
		.committee-header--logo__small{
			display: none;
		}
	.committee-header.invert h1 svg path{
		fill: #FFFFFF;
	}
	.committee-header span{
		display: none;
	}


	@media (min-width: 721px){
		.committee-header:hover,
		/*.committee-header.unscrolled,*/
		body.page-template-page-about-php .committee-header{
			height: 9.4rem;
		}
		.committee-header .committee-header--logo__full,
		.committee-header.tiny.unscrolled .committee-header--logo__full{
			display: block;
		}
		.committee-header .committee-header--logo__small,
		.committee-header.tiny.unscrolled .committee-header--logo__small{
			display: none;
		}
			.committee-header.tiny .committee-header--logo__small{
				display: block;
			}
			.committee-header.tiny .committee-header--logo__full{
				display: none;
			}

		.committee-header:hover .committee-header--logo__full,
		.committee-header.unscrolled .committee-header--logo__full,
		body.page-template-page-about-php .committee-header .committee-header--logo__full{
			display: block;
		}
		.committee-header:hover .committee-header--logo__small,
		.committee-header.unscrolled .committee-header--logo__small,
		body.page-template-page-about-php .committee-header .committee-header--logo__small{
			display: none;
		}
		body.home .committee-header h1 svg path,
		body.dc_tax_topics-networks .committee-header h1 svg path,
		body.loading .committee-header h1 svg path{
			fill: #FFFFFF;
		}
		body.loading .committee-header--logo__full{
			display: block;
		}
		body.loading .committee-header--logo__small{
			display: none;
		}


	}

.theme{
	background-color: #FFFFFF;
	color: #000000;
	background-position: center;
	background-size: cover;
  background-attachment: fixed;
}

	.theme.theme__networks{
		background-color: #000000;
		color: #FFFFFF;
		border-right: none;
	}
	.theme.theme__networks a{
		color: #FFFFFF;
	}
		.theme .theme--content{
			background-color: #FFFFFF;
			/* NO SHADOW
			-webkit-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
														inset 0px 0px 18px 3px rgba(100,100,100,0.85);
				 -moz-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
														inset 0px 0px 18px 3px rgba(100,100,100,0.85);
							box-shadow: inset 0px 0px 0.5px 0.25px rgba( 255, 255, 255, 0.9 ),
														inset 0px 0px 18px 3px rgba(100,100,100,0.85);
														*/
		}
		.theme__networks,
		.theme.theme__networks .theme--content{
			background-color: #000000;
			/* NO SHADOW
			-webkit-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
														inset 0px 0px 15px 3px rgba(180,180,180,0.85);
				 -moz-box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
														inset 0px 0px 15px 3px rgba(180,180,180,0.85);
							box-shadow: inset 0px 0px 0.5px 0.25px rgba( 0, 0, 0, 0.9 ),
														inset 0px 0px 15px 3px rgba(180,180,180,0.85);
														*/
		}

	.theme .theme--image-cover{
		display: none;
		width: 100%;
		height: 200px;
		background-position: top center;
		background-size: cover;
		background-attachment: fixed;
		opacity: 0;
		/* -moz-transform-origin: 0 0;
		transform: translateZ(0); */
	}
		.theme .theme--image-cover.visible{
			opacity: 1;
			transition: opacity .3s ease-out;
		}

		html.b-FFX .theme .theme--image-cover{
			filter: none !important;
		}
		.theme:first-child .theme--image-cover{
				background-position: top left;
		}
		.theme:last-child .theme--image-cover{
				background-position: top right;
		}
		.theme:first-child{
			position: absolute;
			top: 0;
			left: 0;
		}
		.theme:last-child{
			position: absolute;
			top: 0;
			right: 0;
		}

		.theme .theme--leader{
			padding: 0.68rem 1rem 0.63rem;
			/* fontedit */
			padding: 0.88rem 1rem 0.83rem;
			position: sticky;
			top: 0;
			cursor: pointer;
		}
			/* .theme.scrolled-past-top .theme--content .theme--leader{
				border-bottom: 1px solid #000000;
			}
			.theme.theme__networks.scrolled-past-top .theme--content .theme--leader{
				border-bottom: 1px solid #ffffff;
			} */
			.theme .theme--content .theme--leader{
				border-bottom: 1px solid #000000;
			}
			.theme.theme__networks .theme--content .theme--leader{
				border-bottom: 1px solid #ffffff;
			}

			.theme .theme--leader h1{
				margin-bottom: 0;
				line-height: 1rem;
				white-space: nowrap;
				transition: filter .3s ease-in
			}
				.theme .theme--leader h1 .editable+.original{
					display: none;
				}
		.theme .theme--leader h1.hovered{
			filter: blur(3px);
		}


		.theme .theme--follower{
			padding: 0.9em 1rem 10em 1.1rem;
		}
		/* SCROLLBAR HIDING */
		.theme:nth-child(2){
			z-index: 1; /*so that it covers the first-column's scrollbar*/
		}
		.theme .theme--follower{
			box-sizing: content-box;
			width:100%;
			padding: 0 0 0.01em 1rem;
		}
		.theme .theme--section {
			padding-right: 2rem;
		}
		.theme{
			overflow-y: hidden;
		}
		.theme-scroller-wrapper{
			overflow: hidden;
		}
/* ... */

